--- a/projects/_template.html
+++ b/projects/_template.html
@@ -4,16 +4,16 @@
     <meta charset="utf-8">
     <title>Proyecto &ndash; Moonforge</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="../styles.css" rel="stylesheet">
+    <link href="/styles.css" rel="stylesheet">
 </head>
 <body>
     <header class="topbar">
         <div class="container nav-wrap">
-            <a href="../index.html" class="brand">Moonforge</a>
+            <a href="/index.html">Moonforge</a>
             <nav class="nav">
-                <a href="../services.html">Servicios</a>
-                <a href="../portfolio.html">Portfolio</a>
-                <a href="../contact.html">Contacto</a>
+                <a href="/services.html">Servicios</a>
+                <a href="/portfolio.html">Portfolio</a>
+                <a href="/contact.html">Contacto</a>
             </nav>
         </div>
     </header>
@@ -34,7 +34,7 @@
     </footer>
 
     <!-- Carga main.js con defer para asegurar que dicts/funciones están disponibles -->
-    <script src="../main.js" defer></script>
+    <script src="/main.js" defer></script>
     <script>
         document.addEventListener('DOMContentLoaded', async () => {
             try {
