--- a/portfolio.html
+++ b/portfolio.html
@@ -1,48 +1,39 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="es">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Portafolio — Moonforge</title>
-  <link rel="stylesheet" href="styles.css" />
-  <link rel="icon" href="assets/logo.png" />
+    <meta charset="utf-8">
+    <title>Portfolio — Moonforge</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="/styles.css" rel="stylesheet">
 </head>
 <body>
-<header class="topbar">
-  <div class="container nav-wrap">
-    <a class="brand" href="index.html">
-      <img src="assets/logo.png" alt="Moonforge" class="logo" />
-      <span class="brand-text">Moonforge</span>
-    </a>
-    <nav class="nav">
-      <a href="index.html" data-i18n="nav.home">Inicio</a>
-      <a href="services.html" data-i18n="nav.services">Servicios</a>
-      <a href="portfolio.html" data-i18n="nav.portfolio">Portafolio</a>
-      <a href="about.html" data-i18n="nav.about">Sobre nosotros</a>
-      <a href="contact.html" data-i18n="nav.contact">Contacto</a>
-    </nav>
-    <div class="lang">
-      <label for="lang-select" class="sr-only">Idioma</label>
-      <select id="lang-select" aria-label="Idioma">
-        <option value="es">ES</option>
-        <option value="ca">CAT</option>
-        <option value="en">EN</option>
-      </select>
-    </div>
-  </div>
-</header>
-<main>
+    <header class="topbar">
+        <div class="container nav-wrap">
+            <a href="/index.html" class="brand">Moonforge</a>
+            <nav class="nav">
+                <a href="/services.html">Servicios</a>
+                <a href="/portfolio.html" class="active">Portfolio</a>
+                <a href="/contact.html">Contacto</a>
+            </nav>
+            <div class="lang">
+                <select id="lang-select" aria-label="Idioma">
+                    <option value="es">ES</option>
+                    <option value="en">EN</option>
+                    <option value="ca">CA</option>
+                </select>
+            </div>
+        </div>
+    </header>
 
-<section class="container section">
-  <h1 data-i18n="portfolio.title">Portafolio</h1>
-  <p class="muted" data-i18n="portfolio.lead">Selección de proyectos destacados.</p>
-  <div id="portfolioList" class="projects-list"></div>
-</section>
+    <main class="container section">
+        <h1>Portfolio</h1>
+        <div id="portfolioList" class="projects-list"></div>
+    </main>
 
-</main>
-<footer class="footer">
-  <div class="container">© <span id="year"></span> Moonforge</div>
-</footer>
-<script src="main.js"></script>
+    <footer class="footer">
+        <div class="container">© <span id="year"></span> Moonforge</div>
+    </footer>
+
+    <script src="/main.js" defer></script>
 </body>
 </html>
