--- a/projects/_template.html
+++ b/projects/_template.html
@@ -9,12 +9,19 @@
 <body>
     <header class="topbar">
         <div class="container nav-wrap">
-            <a href="/index.html">Moonforge</a>
+            <a href="/index.html" class="brand">Moonforge</a>
             <nav class="nav">
                 <a href="/services.html">Servicios</a>
                 <a href="/portfolio.html">Portfolio</a>
                 <a href="/contact.html">Contacto</a>
             </nav>
+            <div class="lang">
+                <select id="lang-select" aria-label="Idioma">
+                    <option value="es">ES</option>
+                    <option value="en">EN</option>
+                    <option value="ca">CA</option>
+                </select>
+            </div>
         </div>
     </header>
 
@@ -23,22 +30,17 @@
         <p id="projSubtitle" class="muted"></p>
         <div id="carousel" class="carousel"></div>
         <div id="projTags" class="tags"></div>
-
-        <p style="margin-top:18px">
-            <a href="../portfolio.html" class="more">← Volver al portfolio</a>
-        </p>
+        <p style="margin-top:18px"><a class="more" href="/portfolio.html">← Volver al portfolio</a></p>
     </main>
 
     <footer class="footer">
-        <div class="container">&copy; <span id="year"></span> Moonforge</div>
+        <div class="container">© <span id="year"></span> Moonforge</div>
     </footer>
 
-    <!-- Carga main.js con defer para asegurar que dicts/funciones están disponibles -->
     <script src="/main.js" defer></script>
     <script>
         document.addEventListener('DOMContentLoaded', async () => {
             try {
-                // slug desde query (?slug=) o desde el nombre del archivo projects/slug.html
                 const slug = (new URLSearchParams(location.search)).get('slug')
                     || location.pathname.split('/').pop().replace('.html', '');
 
@@ -46,17 +48,15 @@
                     document.getElementById('year').textContent = new Date().getFullYear();
                 }
 
-                // i18n (usa funciones de main.js)
+                // i18n
                 const dict = await loadJSON(dicts[LANG]);
                 applyI18n(dict);
 
-                // Busca el proyecto por slug en el JSON del idioma activo
+                // Carga y busca el proyecto por slug
                 const items = await loadJSON(portfolioData[LANG]);
                 const p = items.find(x => x.slug === slug);
-
                 if (!p) {
                     document.getElementById('projTitle').textContent = 'Proyecto no encontrado';
-                    document.getElementById('projSubtitle').textContent = '';
                     const c = document.getElementById('carousel');
                     if (c) c.innerHTML = '<div class="card" style="padding:16px">No se encontró el proyecto solicitado.</div>';
                     return;
@@ -64,23 +64,11 @@
 
                 document.getElementById('projTitle').textContent = p.title;
                 document.getElementById('projSubtitle').textContent = p.subtitle || '';
-                const tagsEl = document.getElementById('projTags');
-                tagsEl.innerHTML = (p.tags || []).map(t => `<span class="tag">${t}</span>`).join('');
+                document.getElementById('projTags').innerHTML = (p.tags || [])
+                    .map(t => `<span class="tag">${t}</span>`).join('');
 
-                // Carrusel (función definida en main.js)
-                if (typeof renderCarousel === 'function') {
-                    renderCarousel(document.getElementById('carousel'), p.media || [], p.thumb, p.video, p.poster);
-                } else {
-                    // Fallback simple si no está renderCarousel
-                    const car = document.getElementById('carousel');
-                    car.innerHTML = (p.media || [])
-                        .map(m => m.type === 'image'
-                            ? `<img src="${m.src}" alt="" style="width:100%;display:block;margin-bottom:10px">`
-                            : `<video controls ${m.poster ? `poster="${m.poster}"` : ''} style="width:100%;display:block;margin-bottom:10px">
-                     <source src="${m.src}" type="video/mp4">
-                   </video>`
-                        ).join('');
-                }
+                // Carrusel (usa assetUrl internamente)
+                renderCarousel(document.getElementById('carousel'), p.media || [], p.thumb, p.video, p.poster);
             } catch (e) {
                 console.error(e);
                 const c = document.getElementById('carousel');
