Reestructrar la web

--- a/index.html
+++ b/index.html
@@ -1,59 +1,1 @@
-<!doctype html>
-<html lang="es">
-<head>
-    <meta charset="utf-8">
-    <title>Moonforge — Producción Creativa</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="/styles.css" rel="stylesheet">
-</head>
-<body>
-    <header class="topbar">
-        <div class="container nav-wrap">
-            <a href="/index.html" class="brand">Moonforge</a>
-            <nav class="nav">
-                <a href="/services.html" data-i18n="nav.services">Servicios</a>
-                <a href="/portfolio.html" data-i18n="nav.portfolio">Portfolio</a>
-                <a href="/contact.html" data-i18n="nav.contact">Contacto</a>
-            </nav>
-            <div class="lang">
-                <select id="lang-select" aria-label="Idioma">
-                    <option value="es">ES</option>
-                    <option value="en">EN</option>
-                    <option value="ca">CA</option>
-                </select>
-            </div>
-        </div>
-    </header>
-
-    <main>
-        <section class="hero container">
-            <h1>Ideas que brillan, ejecuciones que impactan</h1>
-            <p class="lead">Estrategia, diseño y producción para marcas que quieren destacar.</p>
-            <p><a class="btn" href="/contact.html">Pedir presupuesto</a></p>
-
-            <h2 style="margin-top:28px">Marcas que han confiado</h2>
-            <ul class="brand-list">
-                <li>L'Oréal</li>
-                <li>NYX</li>
-                <li>Musée du Louvre</li>
-                <li>Diesel</li>
-                <li>Roig Arena</li>
-            </ul>
-        </section>
-
-        <section class="container section">
-            <h2>Proyectos destacados</h2>
-            <div id="portfolioList" class="projects-list"></div>
-            <p style="text-align:center;margin-top:16px">
-                <a class="more" href="/portfolio.html">Ver todo el portfolio →</a>
-            </p>
-        </section>
-    </main>
-
-    <footer class="footer">
-        <div class="container">© <span id="year"></span> Moonforge</div>
-    </footer>
-
-    <script src="/main.js" defer></script>
-</body>
-</html>
+<!doctype html><html><head><link rel='stylesheet' href='styles.css'></head><body><h1>Moonforge Home</h1></body></html>
