--- a/portfolio.html
+++ b/portfolio.html
@@ -1,39 +1,1 @@
-<!doctype html>
-<html lang="es">
-<head>
-    <meta charset="utf-8">
-    <title>Portfolio — Moonforge</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="/styles.css" rel="stylesheet">
-</head>
-<body>
-    <header class="topbar">
-        <div class="container nav-wrap">
-            <a href="/index.html" class="brand">Moonforge</a>
-            <nav class="nav">
-                <a href="/services.html">Servicios</a>
-                <a href="/portfolio.html" class="active">Portfolio</a>
-                <a href="/contact.html">Contacto</a>
-            </nav>
-            <div class="lang">
-                <select id="lang-select" aria-label="Idioma">
-                    <option value="es">ES</option>
-                    <option value="en">EN</option>
-                    <option value="ca">CA</option>
-                </select>
-            </div>
-        </div>
-    </header>
-
-    <main class="container section">
-        <h1>Portfolio</h1>
-        <div id="portfolioList" class="projects-list"></div>
-    </main>
-
-    <footer class="footer">
-        <div class="container">© <span id="year"></span> Moonforge</div>
-    </footer>
-
-    <script src="/main.js" defer></script>
-</body>
-</html>
+<!doctype html><html><body><h1>Portfolio</h1></body></html>
