--- a/contact.html
+++ b/contact.html
@@ -1,52 +1,1 @@
-<!DOCTYPE html>
-<html lang="es">
-<head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Contacto — Moonforge</title>
-  <link rel="stylesheet" href="styles.css" />
-  <link rel="icon" href="assets/logo.png" />
-</head>
-<body>
-<header class="topbar">
-  <div class="container nav-wrap">
-    <a class="brand" href="index.html">
-      <img src="assets/logo.png" alt="Moonforge" class="logo" />
-      <span class="brand-text">Moonforge</span>
-    </a>
-    <nav class="nav">
-      <a href="index.html" data-i18n="nav.home">Inicio</a>
-      <a href="services.html" data-i18n="nav.services">Servicios</a>
-      <a href="portfolio.html" data-i18n="nav.portfolio">Portafolio</a>
-      <a href="about.html" data-i18n="nav.about">Sobre nosotros</a>
-      <a href="contact.html" data-i18n="nav.contact">Contacto</a>
-    </nav>
-    <div class="lang">
-      <label for="lang-select" class="sr-only">Idioma</label>
-      <select id="lang-select" aria-label="Idioma">
-        <option value="es">ES</option>
-        <option value="ca">CAT</option>
-        <option value="en">EN</option>
-      </select>
-    </div>
-  </div>
-</header>
-<main>
-
-<section class="container section">
-  <h1 data-i18n="contact.title">Contacto</h1>
-  <form id="contact-form" class="card" action="mailto:hello@moonforge.studio" method="post" enctype="text/plain">
-    <label><span data-i18n="contact.name">Nombre</span><input type="text" name="name" required/></label>
-    <label><span data-i18n="contact.email">Email</span><input type="email" name="email" required/></label>
-    <label><span data-i18n="contact.msg">Mensaje</span><textarea name="message" rows="5" required></textarea></label>
-    <button class="btn" type="submit" data-i18n="contact.send">Enviar</button>
-  </form>
-</section>
-
-</main>
-<footer class="footer">
-  <div class="container">© <span id="year"></span> Moonforge</div>
-</footer>
-<script src="main.js"></script>
-</body>
-</html>
+<!doctype html><html><body><h1>Contacto</h1></body></html>
