--- a/services.html
+++ b/services.html
@@ -1,48 +1,1 @@
-<!doctype html>
-<html lang="es">
-<head>
-    <meta charset="utf-8">
-    <title>Servicios — Moonforge</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="/styles.css" rel="stylesheet">
-</head>
-<body>
-    <header class="topbar">
-        <div class="container nav-wrap">
-            <a href="/index.html" class="brand">Moonforge</a>
-            <nav class="nav">
-                <a href="/services.html" class="active">Servicios</a>
-                <a href="/portfolio.html">Portfolio</a>
-                <a href="/contact.html">Contacto</a>
-            </nav>
-            <div class="lang">
-                <select id="lang-select" aria-label="Idioma">
-                    <option value="es">ES</option>
-                    <option value="en">EN</option>
-                    <option value="ca">CA</option>
-                </select>
-            </div>
-        </div>
-    </header>
-
-    <main class="container section">
-        <h1>Servicios</h1>
-        <p class="muted">Filtra por categoría para encontrar lo que necesitas.</p>
-
-        <div class="toolbar">
-            <label for="serviceFilter" class="sr-only">Filtrar categoría</label>
-            <select id="serviceFilter">
-                <option value="all">Todas</option>
-            </select>
-        </div>
-
-        <div id="servicesGrid" class="grid"></div>
-    </main>
-
-    <footer class="footer">
-        <div class="container">© <span id="year"></span> Moonforge</div>
-    </footer>
-
-    <script src="/main.js" defer></script>
-</body>
-</html>
+<!doctype html><html><body><h1>Servicios</h1></body></html>
