--- a/contact.html
+++ b/contact.html
@@ -1,1 +1,42 @@
-<!doctype html><html><body><h1>Contacto</h1></body></html>
+<!doctype html>
+<html lang="es">
+<head>
+  <meta charset="utf-8">
+  <title>Contacto — Moonforge</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link href="/styles.css" rel="stylesheet">
+</head>
+<body>
+  <header class="topbar">
+    <div class="container nav-wrap">
+      <a href="/index.html" class="brand">Moonforge</a>
+      <nav class="nav">
+        <span class="nav-item has-mega">
+          <a href="/services.html">Servicios</a>
+          <div id="mega-services" class="mega"><div class="mega-grid"></div></div>
+        </span>
+        <a href="/portfolio.html">Portfolio</a>
+        <a href="/index.html#about">Sobre nosotros</a>
+        <a href="/contact.html" class="active">Contacto</a>
+      </nav>
+      <div class="lang"><select id="lang-select"><option value="es">ES</option><option value="en">EN</option><option value="ca">CA</option></select></div>
+    </div>
+  </header>
+
+  <main class="container section">
+    <h1>Contacto</h1>
+    <form class="form" action="https://formspree.io/f/yourid" method="POST">
+      <div class="form-row">
+        <div><input class="input" type="text" name="name" placeholder="Nombre" required></div>
+        <div><input class="input" type="email" name="email" placeholder="Email" required></div>
+        <div class="full"><input class="input" type="text" name="subject" placeholder="Asunto"></div>
+        <div class="full"><textarea class="input" name="message" placeholder="Cuéntanos tu proyecto…" rows="6" required></textarea></div>
+      </div>
+      <button class="btn-submit" type="submit">Enviar</button>
+    </form>
+  </main>
+
+  <footer class="footer"><div class="container">© <span id="year"></span> Moonforge</div></footer>
+  <script src="/main.js" defer></script>
+</body>
+</html>
