--- a/index.html
+++ b/index.html
@@ -66,16 +66,17 @@
 
     <section class="brand-band">
       <div class="container">
-        <div class="brands">
-          <img src="/assets/brands/roig.png" alt="Roig Arena">
-          <img src="/assets/brands/nyx.svg" alt="NYX">
-          <img src="/assets/brands/loreal.svg" alt="L'Oréal">
-          <img src="/assets/brands/hasbro.svg" alt="Hasbro">
-          <img src="/assets/brands/diesel.svg" alt="Diesel">
-          <img src="/assets/brands/louvre.svg" alt="Musée du Louvre">
-          <img src="/assets/brands/acciona.svg" alt="Acciona">
-          <img src="/assets/brands/gva.svg" alt="Generalitat Valenciana">
-        </div>
+          <div class="brands">
+              <img src="/assets/brands/roig.png" alt="Roig Arena">
+              <img src="/assets/brands/nyx.png" alt="NYX">
+              <img src="/assets/brands/loreal.png" alt="L'Oréal">
+              <img src="/assets/brands/hasbro.png" alt="Hasbro">
+              <img src="/assets/brands/diesel.png" alt="Diesel">
+              <img src="/assets/brands/louvre.png" alt="Musée du Louvre">
+              <img src="/assets/brands/acciona.png" alt="Acciona">
+              <img src="/assets/brands/gva.png" alt="Generalitat Valenciana">
+              <img src="/assets/brands/diesel.png" alt="Diesel">
+          </div>
       </div>
     </section>
 
