--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <span class="hero-pane p1"></span>
         <span class="hero-pane p2"></span>
       </div>
-      <div id="heroCarousel" class="hero-carousel">
+      <div id="heroCarousel" class="hero-carousel is-cardstack">
         <div class="hero-track">
           <div class="hero-slide">
             <div class="hero-stage">
