--- a/index.html
+++ b/index.html
@@ -2,21 +2,23 @@
 <html lang="es">
 <head>
   <meta charset="utf-8">
-  <title>Moonforge — Producción Creativa</title>
+  <title>Moonforge — Digitalizando Empresas</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="/styles.css" rel="stylesheet">
 </head>
 <body>
   <header class="topbar">
     <div class="container nav-wrap">
-      <a href="/index.html" class="brand">Moonforge</a>
+        <a href="/index.html" class="brand">
+            <img src="/assets/Logo_Moonforge_White.png" alt="Moonforge logo" class="brand-logo">
+        </a>
       <nav class="nav">
         <span class="nav-item has-mega">
           <a href="/services.html">Servicios</a>
           <div id="mega-services" class="mega"><div class="mega-grid"></div></div>
         </span>
         <a href="/portfolio.html">Portfolio</a>
-        <a href="/index.html#about">Sobre nosotros</a>
+        <a href="/about.html">Sobre nosotros</a>
         <a href="/contact.html">Contacto</a>
       </nav>
       <div class="lang">
@@ -73,17 +75,7 @@
               <img src="/assets/brands/gva.png" alt="Generalitat Valenciana">
           </div>
       </div>
-    </section>
-
-    <section id="about" class="container section">
-      <h2>Sobre nosotros</h2>
-      <div class="card">
-        <p class="muted">
-          Impulsamos la transformación digital de marcas a través de experiencias, XR y productos interactivos.
-          Equipo multidisciplinar: estrategia, diseño, 3D, desarrollo e integración.
-        </p>
-      </div>
-    </section>
+    </section>    
   </main>
 
   <footer class="footer"><div class="container">© <span id="year"></span> Moonforge</div></footer>
