--- a/portfolio.html
+++ b/portfolio.html
@@ -8,19 +8,21 @@
 </head>
 <body>
   <header class="topbar">
-    <div class="container nav-wrap">
-      <a href="/index.html" class="brand">Moonforge</a>
-      <nav class="nav">
-        <span class="nav-item has-mega">
-          <a href="/services.html">Servicios</a>
-          <div id="mega-services" class="mega"><div class="mega-grid"></div></div>
-        </span>
-        <a href="/portfolio.html" class="active">Portfolio</a>
-        <a href="/index.html#about">Sobre nosotros</a>
-        <a href="/contact.html">Contacto</a>
-      </nav>
-      <div class="lang"><select id="lang-select"><option value="es">ES</option><option value="en">EN</option><option value="ca">CA</option></select></div>
-    </div>
+      <div class="container nav-wrap">
+          <a href="/index.html" class="brand">
+              <img src="/assets/Logo_Moonforge_White.png" alt="Moonforge logo" class="brand-logo">
+          </a>
+          <nav class="nav">
+              <span class="nav-item has-mega">
+                  <a href="/services.html">Servicios</a>
+                  <div id="mega-services" class="mega"><div class="mega-grid"></div></div>
+              </span>
+              <a href="/portfolio.html" class="active">Portfolio</a>
+              <a href="/index.html#about">Sobre nosotros</a>
+              <a href="/contact.html">Contacto</a>
+          </nav>
+          <div class="lang"><select id="lang-select"><option value="es">ES</option><option value="en">EN</option><option value="ca">CA</option></select></div>
+      </div>
   </header>
 
   <main class="container section">
