--- a/services.html
+++ b/services.html
@@ -18,7 +18,7 @@
                   <div id="mega-services" class="mega"><div class="mega-grid"></div></div>
               </span>
               <a href="/portfolio.html">Portfolio</a>
-              <a href="/index.html#about">Sobre nosotros</a>
+              <a href="/about.html">Sobre nosotros</a>
               <a href="/contact.html">Contacto</a>
           </nav>
           <div class="lang"><select id="lang-select"><option value="es">ES</option><option value="en">EN</option><option value="ca">CA</option></select></div>
