--- a/index.html
+++ b/index.html
@@ -2,83 +2,66 @@
 <html lang="es">
 <head>
   <meta charset="utf-8">
-  <title>Moonforge — Digitalizando Empresas</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link href="/styles.css" rel="stylesheet">
+  <title>Moonforge</title>
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <header class="topbar">
-    <div class="container nav-wrap">
-        <a href="/index.html" class="brand">
-            <img src="/assets/Logo_Moonforge_White.png" alt="Moonforge logo" class="brand-logo">
-        </a>
-      <nav class="nav">
-        <span class="nav-item has-mega">
-          <a href="/services.html">Servicios</a>
-          <div id="mega-services" class="mega"><div class="mega-grid"></div></div>
-        </span>
-        <a href="/portfolio.html">Portfolio</a>
-        <a href="/about.html">Sobre nosotros</a>
-        <a href="/contact.html">Contacto</a>
-      </nav>
-      <div class="lang">
-        <select id="lang-select" aria-label="Idioma">
-          <option value="es">ES</option><option value="en">EN</option><option value="ca">CA</option>
-        </select>
-      </div>
-    </div>
-  </header>
+<header class="topbar">
+  <div class="container nav-wrap">
+    <a href="index.html" class="brand"><img src="assets/logo.svg" alt="Moonforge" class="brand-logo"></a>
+    <nav class="nav">
+      <a href="contact.html" class="active">Contáctanos</a>
+    </nav>
+  </div>
+</header>
 
-  <main>
-    <section class="hero container">
-      <div id="heroCarousel" class="hero-carousel is-cardstack">
-        <div class="hero-track">
-          <div class="hero-slide">
-            <div class="hero-stage">
-              <div class="hero-card">
-                <h1 class="hero-h1">Descubre nuestras <strong>soluciones</strong> para hacer que tu negocio despegue hacia las estrellas</h1>
-                <a class="hero-cta" href="/services.html">Digitalízame</a>
-              </div>
-            </div>
-          </div>
-          <div class="hero-slide">
-            <div class="hero-stage">
-              <div class="hero-card">
-                <h1 class="hero-h1">Descubre nuestras <strong>soluciones</strong> para hacer que tu negocio despegue hacia las estrellas</h1>
-                <a class="hero-cta" href="/services.html">Digitalízame</a>
-              </div>
-            </div>
-          </div>
-          <div class="hero-slide">
-            <div class="hero-stage">
-              <div class="hero-card">
-                <h1 class="hero-h1">Descubre nuestras <strong>soluciones</strong> para hacer que tu negocio despegue hacia las estrellas</h1>
-                <a class="hero-cta" href="/services.html">Digitalízame</a>
-              </div>
+<main>
+  <section class="hero container">
+    <div id="heroCarousel" class="hero-carousel is-cardstack">
+      <div class="hero-track">
+        <div class="hero-slide">
+          <div class="hero-stage">
+            <div class="hero-card hero-card-cover">
+              <h1 class="hero-h1">Descubre nuestras <strong>soluciones</strong> para hacer que tu negocio despegue</h1>
+              <a class="hero-cta" href="contact.html">Digitalízame</a>
             </div>
           </div>
         </div>
-        <div class="hero-dots"></div>
-      </div>
-    </section>
-
-    <section class="brand-band">
-      <div class="container">
-          <div class="brands">
-              <img src="/assets/brands/roig.png" alt="Roig Arena">
-              <img src="/assets/brands/nyx.png" alt="NYX">
-              <img src="/assets/brands/loreal.png" alt="L'Oréal">
-              <img src="/assets/brands/hasbro.png" alt="Hasbro">
-              <img src="/assets/brands/diesel.png" alt="Diesel">
-              <img src="/assets/brands/louvre.png" alt="Musée du Louvre">
-              <img src="/assets/brands/acciona.png" alt="Acciona">
-              <img src="/assets/brands/gva.png" alt="Generalitat Valenciana">
+        <div class="hero-slide">
+          <div class="hero-stage">
+            <div class="hero-card">
+              <h1 class="hero-h1">Experiencias XR<br>para formación y marketing</h1>
+              <a class="hero-cta" href="contact.html">Digitalízame</a>
+            </div>
           </div>
+        </div>
+        <div class="hero-slide">
+          <div class="hero-stage">
+            <div class="hero-card">
+              <h1 class="hero-h1">Gemelos digitales y showrooms 3D</h1>
+              <a class="hero-cta" href="contact.html">Digitalízame</a>
+            </div>
+          </div>
+        </div>
       </div>
-    </section>    
-  </main>
+      <div class="hero-dots"></div>
+    </div>
+  </section>
 
-  <footer class="footer"><div class="container">© <span id="year"></span> Moonforge</div></footer>
-  <script src="/main.js" defer></script>
+  <section class="brand-band">
+    <div class="container brands">
+      <img src="assets/logo.svg" alt="Marca 1"><img src="assets/logo.svg" alt="Marca 2">
+      <img src="assets/logo.svg" alt="Marca 3"><img src="assets/logo.svg" alt="Marca 4">
+      <img src="assets/logo.svg" alt="Marca 5"><img src="assets/logo.svg" alt="Marca 6">
+    </div>
+  </section>
+</main>
+
+<footer class="footer">
+  <div class="container">© <span id="year"></span> Moonforge</div>
+</footer>
+
+<script src="main.js" defer></script>
 </body>
 </html>
