--- a/index.html
+++ b/index.html
@@ -8,12 +8,15 @@
 </head>
 <body>
 <header class="topbar">
-  <div class="container nav-wrap">
-    <a href="index.html" class="brand"><img src="assets/logo.svg" alt="Moonforge" class="brand-logo"></a>
-    <nav class="nav">
-      <a href="contact.html" class="active">Contáctanos</a>
-    </nav>
-  </div>
+    <div class="container nav-wrap">
+        <a href="/index.html" class="brand">
+            <img src="/assets/Logo_Color.png" alt="Moonforge logo simple" class="brand-logo">
+            <img src="/assets/Logo_Moonforge_Tag.png" alt="Moonforge logo" class="brand-logo">
+        </a>
+        <nav class="nav">
+            <a href="contact.html" class="active">Contáctanos</a>
+        </nav>
+    </div>
 </header>
 
 <main>
@@ -50,11 +53,16 @@
   </section>
 
   <section class="brand-band">
-    <div class="container brands">
-      <img src="assets/logo.svg" alt="Marca 1"><img src="assets/logo.svg" alt="Marca 2">
-      <img src="assets/logo.svg" alt="Marca 3"><img src="assets/logo.svg" alt="Marca 4">
-      <img src="assets/logo.svg" alt="Marca 5"><img src="assets/logo.svg" alt="Marca 6">
-    </div>
+      <div class="container brands">
+          <img src="/assets/brands/roig.png" alt="Roig Arena">
+          <img src="/assets/brands/nyx.png" alt="NYX">
+          <img src="/assets/brands/loreal.png" alt="L'Oréal">
+          <img src="/assets/brands/hasbro.png" alt="Hasbro">
+          <img src="/assets/brands/diesel.png" alt="Diesel">
+          <img src="/assets/brands/louvre.png" alt="Musée du Louvre">
+          <img src="/assets/brands/acciona.png" alt="Acciona">
+          <img src="/assets/brands/gva.png" alt="Generalitat Valenciana">
+      </div>
   </section>
 </main>
 
