--- a/contact.html
+++ b/contact.html
@@ -31,6 +31,7 @@
         <input type="hidden" name="_redirect" value="https://moonforge.es/index.html">
 
         <button type="submit">Enviar</button>
+        <p id="estado" class="muted"></p>
     </form>
     <script>
         const FORM_URL = "https://formspree.io/f/xnnbojnb";
