Some graphic uploads

--- a/index.html
+++ b/index.html
@@ -10,8 +10,7 @@
 <header class="topbar">
     <div class="container nav-wrap">
         <a href="/index.html" class="brand">
-            <img src="/assets/Logo_Color.png" alt="Moonforge logo simple" class="brand-logo">
-            <img src="/assets/Logo_Moonforge_Tag.png" alt="Moonforge logo" class="brand-logo">
+            <img src="/assets/LogoWeb.png" alt="Moonforge logo simple" class="brand-logo">
         </a>
         <nav class="nav">
             <a href="contact.html" class="active">Contáctanos</a>
