--- a/contact.html
+++ b/contact.html
@@ -8,12 +8,14 @@
 </head>
 <body>
 <header class="topbar">
-  <div class="container nav-wrap">
-    <a href="index.html" class="brand"><img src="assets/logo.svg" alt="Moonforge" class="brand-logo"></a>
-    <nav class="nav">
-      <a href="contact.html" class="active">Contáctanos</a>
-    </nav>
-  </div>
+    <div class="container nav-wrap">
+        <a href="/index.html" class="brand">
+            <img src="/assets/LogoWeb.png" alt="Moonforge logo simple" class="brand-logo">
+        </a>
+        <nav class="nav">
+            <a href="contact.html" class="active">Contáctanos</a>
+        </nav>
+    </div>
 </header>
 
 <main class="section container">
