--- a/contact.html
+++ b/contact.html
@@ -20,7 +20,7 @@
 
 <main class="section container">
     <h1>Contacto</h1>
-    <form action="https://formspree.io/f/xnnbojnb" method="POST">
+    <form action="https://formspree.io/f/mdklvkyy" method="POST">
         <label>Nombre <input type="text" name="nombre" required></label>
         <label>Email <input type="email" name="email" required></label>
         <label>Asunto <input type="text" name="asunto"></label>
@@ -36,7 +36,7 @@
         <p id="estado" class="muted"></p>
     </form>
     <script>
-        const FORM_URL = "https://formspree.io/f/xnnbojnb";
+        const FORM_URL = "https://formspree.io/f/mdklvkyy";
         const form = document.querySelector("form");
         const estado = document.getElementById("estado");
 
