--- a/contact.html
+++ b/contact.html
@@ -19,45 +19,53 @@
 </header>
 
 <main class="section container">
-    <h1>Contacto</h1>
-    <form action="https://formspree.io/f/mdklvkyy" method="POST">
-        <label>Nombre <input type="text" name="nombre" required></label>
-        <label>Email <input type="email" name="email" required></label>
-        <label>Asunto <input type="text" name="asunto"></label>
-        <label>Mensaje <textarea name="mensaje" required></textarea></label>
+    <section class="section container">
+        <div class="contact-card">
+            <h1>Contacto</h1>
 
-        <input type="hidden" name="_subject" value="[Contacto] Moonforge">
-        <input type="hidden" name="_language" value="es">
-        <input type="text" name="_honey" style="display:none">
-        <input type="hidden" name="_gotcha" style="display:none">
-        <input type="hidden" name="_redirect" value="https://moonforge.es/index.html">
+            <form action="https://formspree.io/f/xnnbojnb" method="POST" id="contactForm">
+                <div class="form-grid">
+                    <label>
+                        <span>Nombre</span>
+                        <input class="input" type="text" name="nombre" required>
+                    </label>
 
-        <button type="submit">Enviar</button>
-        <p id="estado" class="muted"></p>
-    </form>
+                    <label>
+                        <span>Email</span>
+                        <input class="input" type="email" name="email" required>
+                    </label>
+
+                    <label class="full">
+                        <span>Asunto</span>
+                        <input class="input" type="text" name="asunto">
+                    </label>
+
+                    <label class="full">
+                        <span>Mensaje</span>
+                        <textarea class="input" name="mensaje" rows="6" required></textarea>
+                    </label>
+                </div>
+
+                <div class="form-actions">
+                    <button class="btn-submit" type="submit">Enviar</button>
+                    <p id="estado" class="muted"></p>
+                </div>
+            </form>
+        </div>
+    </section>
     <script>
-        const FORM_URL = "https://formspree.io/f/mdklvkyy";
-        const form = document.querySelector("form");
+        const FORM_URL = "https://formspree.io/f/xnnbojnb";
+        const form = document.getElementById("contactForm");
         const estado = document.getElementById("estado");
 
         form.addEventListener("submit", async (e) => {
             e.preventDefault();
             estado.textContent = "Enviando…";
             try {
-                const data = Object.fromEntries(new FormData(form).entries());
-                const r = await fetch(FORM_URL, {
-                    method: "POST",
-                    headers: { "Accept": "application/json" },
-                    body: new FormData(form)
-                });
+                const r = await fetch(FORM_URL, { method: "POST", headers: { "Accept": "application/json" }, body: new FormData(form) });
                 if (r.ok) { estado.textContent = "Enviado. Gracias."; form.reset(); }
-                else {
-                    const err = await r.json().catch(() => ({}));
-                    estado.textContent = "Error: " + (err.errors?.[0]?.message || r.statusText);
-                }
-            } catch {
-                estado.textContent = "Error de red";
-            }
+                else { const err = await r.json().catch(() => ({})); estado.textContent = "Error: " + (err.errors?.[0]?.message || r.statusText); }
+            } catch { estado.textContent = "Error de red"; }
         });
     </script>
 </main>
