--- a/index.html
+++ b/index.html
@@ -19,37 +19,38 @@
 </header>
 
 <main>
-  <section class="hero container">
-    <div id="heroCarousel" class="hero-carousel is-cardstack">
-      <div class="hero-track">
-        <div class="hero-slide">
-          <div class="hero-stage">
-            <div class="hero-card hero-card-cover">
-              <h1 class="hero-h1">Descubre nuestras <strong>soluciones</strong> para hacer que tu negocio despegue</h1>
-              <a class="hero-cta" href="contact.html">Digitalízame</a>
+    <section class="hero container">
+        <div class="hero-bg" aria-hidden="true"></div>
+            <div id="heroCarousel" class="hero-carousel is-cardstack">
+                <div class="hero-track">
+                    <div class="hero-slide">
+                        <div class="hero-stage">
+                            <div class="hero-card hero-card-cover">
+                                <h1 class="hero-h1">Descubre nuestras <strong>soluciones</strong> para hacer que tu negocio despegue</h1>
+                                <a class="hero-cta" href="contact.html">Digitalízame</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="hero-slide">
+                        <div class="hero-stage">
+                            <div class="hero-card">
+                                <h1 class="hero-h1">Experiencias XR<br>para formación y marketing</h1>
+                                <a class="hero-cta" href="contact.html">Digitalízame</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="hero-slide">
+                        <div class="hero-stage">
+                            <div class="hero-card">
+                                <h1 class="hero-h1">Gemelos digitales y showrooms 3D</h1>
+                                <a class="hero-cta" href="contact.html">Digitalízame</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="hero-dots"></div>
             </div>
-          </div>
-        </div>
-        <div class="hero-slide">
-          <div class="hero-stage">
-            <div class="hero-card">
-              <h1 class="hero-h1">Experiencias XR<br>para formación y marketing</h1>
-              <a class="hero-cta" href="contact.html">Digitalízame</a>
-            </div>
-          </div>
-        </div>
-        <div class="hero-slide">
-          <div class="hero-stage">
-            <div class="hero-card">
-              <h1 class="hero-h1">Gemelos digitales y showrooms 3D</h1>
-              <a class="hero-cta" href="contact.html">Digitalízame</a>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="hero-dots"></div>
-    </div>
-  </section>
+    </section>
 
   <section class="brand-band">
       <div class="container brands">
